squished a bug

--- a/css/input.scss
+++ b/css/input.scss
@@ -44,6 +44,7 @@ footer {
   align-items: center;
   justify-content: space-between;
   height: 120px;
+  min-width: 100vw;
 }
 
 // Class definitions
