--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ footer {
   align-items: center;
   justify-content: space-between;
   height: 120px;
+  min-width: 100vw;
 }
 
 .get-started-footer {
